--- a/Index.html
+++ b/Index.html
@@ -6,16 +6,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"
+        defer>
+    </script>
     <script src="/index.js" defer></script>
     <title>E-Commerce-API</title>
 </head>
 
 <body>
-    <h1 class="header">E-Commerce-API-Fetch</h1>
-    <div class="cards">
+    <header>
+        <!-- Navigation -->
+        <nav>
+            <h1>Fakeezy</h1>
+            <div class="linkages">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Products</a></li>
+                    <li><a href="">Contact Us</a></li>
+                </ul>
+                <div class="signs">
+                    <button>Log In</button>
+                    <button>Register</button>
+                </div>
+            </div>
+        </nav>
+        <!-- Carousel -->
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="/img/img1.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="/img/img2.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="/img/img2.jpg" class="d-block w-100" alt="...">
+                </div>
+            </div>
+        </div>
+
+    </header>
+    <!-- <div class="products">
+        <h1 class="header">E-Commerce-API-Fetch</h1>
+        <div class="cards">
+        </div>
 
 
-    </div>
+    </div> -->
 </body>
 
 </html>
