--- a/Index.html
+++ b/Index.html
@@ -38,7 +38,7 @@
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/img/img1.jpg" class="d-block w-100" alt="...">
+                    <img src="/img/img1.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
                     <img src="/img/img2.jpg" class="d-block w-100" alt="...">
@@ -48,15 +48,104 @@
                 </div>
             </div>
         </div>
+        <!-- Slider -->
+        <!-- <div class="slide">
+            <div class='slider'>
+                <div class='container'>
+                    <div><img src="https://nodejs.org/static/images/logos/nodejs-new-pantone-black.png" /></div>
+                    <div><img src="http://daynin.github.io/clojurescript-presentation/img/react-logo.png" /></div>
+                    <div><img src="https://raw.githubusercontent.com/reactjs/redux/master/logo/logo.png" /></div>
+                    <div><img src="https://git-scm.com/images/logos/downloads/Git-Logo-2Color.png" /></div>
+                    <div><img
+                            src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/Postgresql_elephant.svg/1000px-Postgresql_elephant.svg.png" />
+                    </div>
+                    <div><img src="https://pbs.twimg.com/media/CZGHPChUAAA3jqE.png" /></div>
+                    <div><img src="https://github.com/d3/d3-logo/blob/master/d3.png?raw=true" /></div>
+                    <div><img src="https://nodejs.org/static/images/logos/nodejs-new-pantone-black.png" /></div>
+                    <div><img src="http://daynin.github.io/clojurescript-presentation/img/react-logo.png" /></div>
+                    <div><img src="https://raw.githubusercontent.com/reactjs/redux/master/logo/logo.png" /></div>
+                    <div><img src="https://git-scm.com/images/logos/downloads/Git-Logo-2Color.png" /></div>
+                    <div><img
+                            src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/Postgresql_elephant.svg/1000px-Postgresql_elephant.svg.png" />
+                    </div>
+                    <div><img src="https://pbs.twimg.com/media/CZGHPChUAAA3jqE.png" /></div>
+                    <div><img src="https://github.com/d3/d3-logo/blob/master/d3.png?raw=true" /></div>
+                </div>
+            </div>
+        </div> -->
 
+
+        <!-- <div class="item">
+    <img src="/img/Ishmael.jpg" alt="">
+    <p>PlayStation Pad</p>
+</div> -->
+
+        <div class="client-talk">
+            <!-- <h1>clients</h1> -->
+            <div class="slider">
+                <div class="slide-track">
+                    <div class="sliding">
+                        <img src="https://ae01.alicdn.com/kf/Sf492a519e6944d4092993c67158a8ba3p/Sexy-Skinny-Dress-Fashion-Ink-Splash-Print-High-Slit-Dress-Summer-Vintage-Drawstring-Ruched-Party-Dress.jpg_Q90.jpg_.webp"
+                            alt="">
+                    </div>
+                    <div class="sliding">
+                        <img src="https://ae01.alicdn.com/kf/Sfdefe45f60984edfa33219a5af94a9deK/Sexy-Skinny-Dress-Fashion-Ink-Splash-Print-High-Slit-Dress-Summer-Vintage-Drawstring-Ruched-Party-Dress.jpg_Q90.jpg_.webp"
+                            alt="">
+                    </div>
+                    <div class="sliding">
+                        <img src="https://ae01.alicdn.com/kf/S4128ceba41c84b59b07b9a566fc5c5e6h/Sexy-Women-Demin-Long-Dress-2022-New-Elegant-High-Side-Split-Turn-down-Neck-Single-Breasted.jpg_220x220xz.jpg_.webp"
+                            alt="">
+                    </div>
+                    <div class="sliding">
+                        <img src="https://ae01.alicdn.com/kf/S2e48fc196a7140268079e5116f8ddd85b/New-Spring-Rugby-Pattern-Fashion-Men-s-training-T-shirt-Long-Sleeve-Suit-Sweatshirt-Crew-Neck.jpg_220x220xz.jpg_.webp"
+                            alt="">
+                    </div>
+                    <div class="sliding">
+                        <img src="https://ae01.alicdn.com/kf/S56b8ff9ed679429c9d2caf16e35281den/FALIZA-Men-s-Fleece-Sweater-Coat-Winter-Thick-Patchwork-Wool-Cardigan-Warm-Knitted-Sweater-Jackets-Casual.jpg_220x220xz.jpg_.webp"
+                            alt="">
+                    </div>
+                    <div class="sliding">
+                        <img src="https://ae01.alicdn.com/kf/S08cad23f3026451fbd0a65c033b540af0/2022-New-Arrival-Wine-Red-Men-Suits-2Pieces-Jacket-Pant-Tie-High-Quality-Slim-Fit-Blazer.jpg_220x220xz.jpg_.webp"
+                            alt="">
+                    </div>
+                    <div class="sliding">
+                        <img src="https://ae01.alicdn.com/kf/S2817674039d542a78cce49f00f098a8bk/Peak-Collar-Men-Suits-Slim-Fit-Notched-Green-Mens-Suit-Blazers-Jackets-Pants-2-Piece-Formal.jpg_220x220xz.jpg_.webp"
+                            alt="">
+                    </div>
+                    <div class="sliding">
+                        <img src="https://ae01.alicdn.com/kf/H4c5f673412bc4dc0b23f5913b3962cacS/Louis-Brand-Women-Shoulder-Messenger-Crossbody-Bags-2020-G-Bags-Famous-Designer-Print-Handbags-Luxury-Fashion.jpg_220x220xz.jpg_.webp"
+                            alt="">
+                    </div>
+                    <div class="sliding">
+                        <img src="https://m.media-amazon.com/images/I/81wFpgL6E+L._AC_UL320_.jpg" alt="">
+                    </div>
+                    <div class="sliding">
+                        <img src="https://m.media-amazon.com/images/I/61vLs+O8pjL._AC_UL320_.jpg" alt="">
+                    </div>
+                    <div class="sliding">
+                        <img src="https://m.media-amazon.com/images/I/61V0JGAWlaL._AC_UL320_.jpg" alt="">
+                    </div>
+                    <div class="sliding">
+                        <img src="https://m.media-amazon.com/images/I/61nOmLpoT7L._AC_UL320_.jpg" alt="">
+                    </div>
+                    <div class="sliding">
+                        <img src="https://m.media-amazon.com/images/I/51BVxjhAoIL._AC_UL320_.jpg" alt="">
+                    </div>
+                    <div class="sliding">
+                        <img src="https://m.media-amazon.com/images/I/71CSqU9XlbL._AC_UL320_.jpg" alt="">
+                    </div>
+
+                </div>
+            </div>
+        </div>
     </header>
-    <!-- <div class="products">
+    <div class="products">
         <h1 class="header">E-Commerce-API-Fetch</h1>
         <div class="cards">
         </div>
 
 
-    </div> -->
+    </div>
 </body>
 
 </html>
