--- a/Index.html
+++ b/Index.html
@@ -48,40 +48,9 @@
                 </div>
             </div>
         </div>
+
         <!-- Slider -->
-        <!-- <div class="slide">
-            <div class='slider'>
-                <div class='container'>
-                    <div><img src="https://nodejs.org/static/images/logos/nodejs-new-pantone-black.png" /></div>
-                    <div><img src="http://daynin.github.io/clojurescript-presentation/img/react-logo.png" /></div>
-                    <div><img src="https://raw.githubusercontent.com/reactjs/redux/master/logo/logo.png" /></div>
-                    <div><img src="https://git-scm.com/images/logos/downloads/Git-Logo-2Color.png" /></div>
-                    <div><img
-                            src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/Postgresql_elephant.svg/1000px-Postgresql_elephant.svg.png" />
-                    </div>
-                    <div><img src="https://pbs.twimg.com/media/CZGHPChUAAA3jqE.png" /></div>
-                    <div><img src="https://github.com/d3/d3-logo/blob/master/d3.png?raw=true" /></div>
-                    <div><img src="https://nodejs.org/static/images/logos/nodejs-new-pantone-black.png" /></div>
-                    <div><img src="http://daynin.github.io/clojurescript-presentation/img/react-logo.png" /></div>
-                    <div><img src="https://raw.githubusercontent.com/reactjs/redux/master/logo/logo.png" /></div>
-                    <div><img src="https://git-scm.com/images/logos/downloads/Git-Logo-2Color.png" /></div>
-                    <div><img
-                            src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/Postgresql_elephant.svg/1000px-Postgresql_elephant.svg.png" />
-                    </div>
-                    <div><img src="https://pbs.twimg.com/media/CZGHPChUAAA3jqE.png" /></div>
-                    <div><img src="https://github.com/d3/d3-logo/blob/master/d3.png?raw=true" /></div>
-                </div>
-            </div>
-        </div> -->
-
-
-        <!-- <div class="item">
-    <img src="/img/Ishmael.jpg" alt="">
-    <p>PlayStation Pad</p>
-</div> -->
-
-        <div class="client-talk">
-            <!-- <h1>clients</h1> -->
+        <div class="client-talk">=
             <div class="slider">
                 <div class="slide-track">
                     <div class="sliding">
@@ -140,7 +109,7 @@
         </div>
     </header>
     <div class="products">
-        <h1 class="header">E-Commerce-API-Fetch</h1>
+        <h1 class="header">Products</h1>
         <div class="cards">
         </div>
 
